--- a/src/main/webapp/admin/itemInfo.html
+++ b/src/main/webapp/admin/itemInfo.html
@@ -43,7 +43,8 @@
         }
     }
     function formatImage(val, row) {
-        return "<img width=100 height=100 src='../static/itemImages/" + val + "'>";
+        console.log(val);
+        return "<img width=100 height=100 src='/static/" + val + "'>";
     }
     function formatEpoch(val, row){
         let current_datetime = new Date(val);
