--- a/src/main/webapp/admin/itemInfo.html
+++ b/src/main/webapp/admin/itemInfo.html
@@ -44,7 +44,7 @@
     }
     function formatImage(val, row) {
         console.log(val);
-        return "<img width=100 height=100 src='/static/" + val + "'>";
+        return "<img width=100 height=100 src='/static/itemImages/" + val + "'>";
     }
     function formatEpoch(val, row){
         let current_datetime = new Date(val);
